--- a/README.textile
+++ b/README.textile
@@ -21,6 +21,8 @@ These 6 simple steps are the essentials to get you smoothly up and running...
 # Start your server with @./script/server@
 # Open up "http://localhost:3000":http://localhost:3000 and login with username 'admin' and password 'yippeekayea'.
 
+# If you wish to populate the database with sample data, simply run @rake db:data:load@
+
 Many thanks to ariejan for Baseapp:
 	
  "http://github.com/ariejan/baseapp":http://github.com/ariejan/baseapp
