--- a/README.textile
+++ b/README.textile
@@ -5,9 +5,7 @@ RubyGrade is an online Gradebook for teachers.
 It is designed for teachers to keep track on their students' grades and attendance records.
 
 
-Read the next paragraph for a quickstart. Head over to "http://rubygrade.heroku.com/dashboard/comments"
 
-RubyGrade was built ontop of 'Baseapp'. Head over to :http://baseapp.org for more detailed documentation.
 
 h2. Quickstart
 
@@ -16,18 +14,18 @@ RubyGrade is built on RAILS 2.2.2
 These 6 simple steps are the essentials to get you smoothly up and running...
 
 # The default config/database.yml is configured for Sqlite3. (you can copy one of the other sample files in there and edit it if you need)
-# Edit the config/config.yml file to suit your needs
-# Open a shell and run @rake gems:install@ to install required gems, then @rake db:migrate@ to create your database and setup the prepared defaults. 
+# (*Optional*; edit the config/config.yml file to suit your needs)
+# Open a shell and run @rake gems:install@ to install required gems, then @rake db:migrate@. (Optional; run @rake db:data:load@ to populate the database with sample data. 
 # Start your server with @./script/server@
 # Open up "http://localhost:3000":http://localhost:3000 and login with username 'admin' and password 'yippeekayea'.
 
-# If you wish to populate the database with sample data, simply run @rake db:data:load@
 
 Many thanks to ariejan for Baseapp:
 	
  "http://github.com/ariejan/baseapp":http://github.com/ariejan/baseapp
 
 To report a bug or make a suggestion head over to:
- "http://rubygrade.heroku.com/dashboard/comments"
+
+ "http://rubygrade.heroku.com/dashboard/comments":http://rubygrade.heroku.com/dashboard/comments
 
 RubyGrade is released to the public under the MIT license.
